building the layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
   </head>
   <body>
     <div class="container">
-      Testing
+      <div class="sidebar">
+        sidebar
+      </div>
+
+      <header class="header">
+        Header
+      </header>
+
+      <div class="realtors">
+        realtors
+      </div>
+
+      <section class="features">
+        features
+      </section>
+
+      <div class="story__pictures">
+        stiry pictures
+      </div>
+
+      <div class="story__content">
+        stort content
+      </div>
+
+      <section class="homes">
+        home
+      </section>
+
+      <section class="gallery">
+        gallery
+      </section>
+
+      <footer class="footer">
+        footer
+      </footer>
     </div>
   </body>
 </html>
